force-app/main/default/objects/copado__Quality_Gate__c/fields/copado__Selenium_Test_Group__c.field-meta.xml
<CustomField>
    <fullName>copado__Selenium_Test_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If &#39;Selenium Test&#39; is selected as the type, what Selenium Test Group should be run?</description>
    <inlineHelpText>If &#39;Selenium Test&#39; is selected as the type, what Selenium Test Group should be run?</inlineHelpText>
    <label>Selenium Test Group</label>
    <referenceTo>copado__Selenium_Test_Group__c</referenceTo>
    <relationshipLabel>Quality Gates</relationshipLabel>
    <relationshipName>Quality_Gates</relationshipName>
    <type>Lookup</type>
</CustomField>