force-app/main/default/objects/copado__Quality_Gate__c/fields/copado__Static_Code_Analysis_Settings__c.field-meta.xml
<CustomField>
    <fullName>copado__Static_Code_Analysis_Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If &#39;Static Code Analysis&#39; is selected as the type, which static analysis settings should be used?</description>
    <inlineHelpText>If &#39;Static Code Analysis&#39; is selected as the type, which static analysis settings should be used?</inlineHelpText>
    <label>Static Code Analysis Settings</label>
    <referenceTo>copado__Static_Code_Analysis_Settings__c</referenceTo>
    <relationshipLabel>Quality Gates</relationshipLabel>
    <relationshipName>Quality_Gates</relationshipName>
    <type>Lookup</type>
</CustomField>